@@ -1,3 +1,9 @@
+2003-12-30  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/art/path.m (-DPSrectstroke::::,
+	-_axis_rectangle::::vpath:axis::::pixel:): Adopted to change in 
+	NSAffineTransform.h. 
+
 2003-12-28  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/win32/WIN32Server.m (initWithAttributes:): Adjusted
